[package]
name = "snake"
version = "0.2.0"
edition = "2021"
description = "A snake game similar to Nokia"
repository = "https://github.com/yoonghan/Walcron"
license = "Mozilla Public License Version 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.63"

[lib]
crate-type = ["cdylib"]
path = "src/rust/lib.rs"