[package]
name = "snake"
version = "0.3.0"
edition = "2021"
description = "A snake game similar to Nokia"
repository = "https://github.com/yoonghan/Walcron"
license = "Mozilla Public License Version 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.93"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.61"

[lib]
crate-type = ["cdylib","rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"